--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 
 title: okidogi's blog
-author: Feng LI
+author: okidogi
 description: >- # this means to ignore newlines until "baseurl:"
   Programmer.
 baseurl: "" # the subpath of your site, e.g. /blog
